This commit applies patches provided in Bug#: 236427